--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     padding: 5;
     
 }
-
 .header{
     display: block;
     background-image: linear-gradient(to bottom,rgba(0,0,0,0.594),rgba(255,255,255,0)),url('Banner\ Image.png');
@@ -20,7 +19,6 @@
     font-weight: 600;
     font-size: 25px;
 }
-
 .discount-off{
     font-size: 45px;
     color: rgba(250, 52, 17, 0.826);
@@ -285,8 +283,6 @@
     display: flex;
     justify-content: center;
 }
-
-
 .cpr{
     display: flex;
     justify-content: center;
@@ -300,4 +296,5 @@
 .rights{
     display: flex;
     justify-content: end;
+    cursor: pointer;
 }
